--- a/dot_config/zsh_plugins.txt.tmpl
+++ b/dot_config/zsh_plugins.txt.tmpl
@@ -1,9 +1,7 @@
-atuinsh/atuin
+jeffreytse/zsh-vi-mode
 z-shell/zsh-eza
-
-zsh-users/zsh-syntax-highlighting
+zdharma-continuum/fast-syntax-highlighting
 zsh-users/zsh-autosuggestions
-zsh-users/zsh-history-substring-search
 
 getantidote/use-omz      # handle OMZ dependencies
 ohmyzsh/ohmyzsh path:plugins/aliases
@@ -11,7 +9,6 @@ ohmyzsh/ohmyzsh path:plugins/aws
 ohmyzsh/ohmyzsh path:plugins/brew
 ohmyzsh/ohmyzsh path:plugins/bundler
 ohmyzsh/ohmyzsh path:plugins/command-not-found
-ohmyzsh/ohmyzsh path:plugins/compleat
 ohmyzsh/ohmyzsh path:plugins/copybuffer
 ohmyzsh/ohmyzsh path:plugins/copyfile
 ohmyzsh/ohmyzsh path:plugins/copypath
@@ -23,6 +20,7 @@ ohmyzsh/ohmyzsh path:plugins/gh
 ohmyzsh/ohmyzsh path:plugins/git
 ohmyzsh/ohmyzsh path:plugins/gpg-agent
 ohmyzsh/ohmyzsh path:plugins/kitty
+ohmyzsh/ohmyzsh path:plugins/kubectl
 ohmyzsh/ohmyzsh path:plugins/npm
 ohmyzsh/ohmyzsh path:plugins/pip
 ohmyzsh/ohmyzsh path:plugins/podman
@@ -39,9 +37,7 @@ ohmyzsh/ohmyzsh path:plugins/ssh
 ohmyzsh/ohmyzsh path:plugins/thefuck
 ohmyzsh/ohmyzsh path:plugins/themes
 ohmyzsh/ohmyzsh path:plugins/uv
-ohmyzsh/ohmyzsh path:plugins/vi-mode
 # Load order matters; must be last
-# redis-cli plugin relies on homebrew completion.
 {{ if eq .chezmoi.os "linux" }}
 ohmyzsh/ohmyzsh path:plugins/ubuntu
 {{ else if eq .chezmoi.os "darwin" }}
