--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -17,7 +17,8 @@ export PRETTIERD_DEFAULT_CONFIG="~/.config/prettier/prettier.config.js"
 # tokyonight_moon
 # eval "$(oh-my-posh init zsh --config ~/.config/tokyonight/oh-my-posh/tokyonight_moon.omp.yaml)"
 # Catppuccin Macchiato
-eval "$(oh-my-posh init zsh --config ~/.config/catppuccin/oh-my-posh/catppuccin_macchiato.omp.yaml)"
+omp_config='~/.config/catppuccin/oh-my-posh/catppuccin_macchiato.omp.yaml'
+eval "$(oh-my-posh init zsh --config ${omp_config})"
 
 {{ if eq .chezmoi.os "Linux" }}
 export SSH_AUTH_SOCK=$HOME.1password/agent.sock
@@ -26,12 +27,17 @@ export PYENV_ROOT=$HOME/.pyenv
 [[ -d $PYENV_ROOT/bin ]] && export PATH="$PYENV_ROOT/bin:$PATH"
 eval "$(pyenv init -)"
 
-export KERL_CONFIGURE_OPTIONS="--disabled-debug --without-javac --disable-hipe --with-ssl=$(brew --prefix openssl)"
+export KERL_CONFIGURE_OPTIONS="--disabled-debug --without-javac --disable-hipe \
+  --with-ssl=$(brew --prefix openssl)"
 
 {{ else if eq .chezmoi.os "darwin" }}
 export SSH_AUTH_SOCK=$HOME/Library/Group\ Containers/2BUA8C4S2C.com.1password/t/agent.sock
 
-export KERL_CONFIGURE_OPTIONS="--disable-debug --disable-silent-rules --without-javac --enable-shared-zlib --enable-dynamic-ssl-lib --enable-hipe --enable-sctp --enable-smp-support --enable-threads --enable-kernel-poll --enable-wx --enable-darwin-64bit --with-ssl=$(brew --prefix openssl)"
+export KERL_CONFIGURE_OPTIONS="--disable-debug --disable-silent-rules \
+  --without-javac --enable-shared-zlib --enable-dynamic-ssl-lib \
+  --enable-hipe --disable-sctp --enable-smp-support --enable-threads \
+  --enable-kernel-poll --enable-wx --enable-darwin-64bit \
+  --with-ssl=$(brew --prefix openssl)"
 export NODE_OPTIONS="--max-old-space-size=8192"
 export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
 {{ end }}
