Refine work_computer install process and add asdf plugin script.

--- a/.chezmoiscripts/run_before_00-install-prerequisites.sh.tmpl
+++ b/.chezmoiscripts/run_before_00-install-prerequisites.sh.tmpl
@@ -2,7 +2,7 @@
 
 {{ template "shared_script_utils.bash" . }}
 
-{{ if (and (or (eq .chezmoi.os "darwin") (eq .chezmoi.os "linux")) (not .work_computer)) }}
+{{ if or (eq .chezmoi.os "darwin") (eq .chezmoi.os "linux") }}
 if [[ ! $(command -v kitty) ]]; then
   header "😸 Installing Kitty terminal emulator"
   curl -L https://sw.kovidgoyal.net/kitty/installer.sh | sh /dev/stdin
