Update oh-my-posh config, remove global tool-versions, and update 1Password agent.

--- a/dot_config/private_1Password/private_ssh/private_agent.toml.tmpl
+++ b/dot_config/private_1Password/private_ssh/private_agent.toml.tmpl
@@ -28,10 +28,15 @@
 #
 # More examples can be found here:
 #  https://developer.1password.com/docs/ssh/agent/config
-[[ssh-keys]]
-vault p "Private"
 
-{{- if .work_computer }}
+{{ if .work_computer }}
+[[ssh-keys]]
+item = "Desktop Git Key"
+vault = "Private"
+
 [[ssh-keys]]
 vault = "Spreetail"
+{{ else }}
+[[ssh-keys]]
+vault = "Private"
 {{ end -}}
