--- a/private_dot_ssh/config.tmpl
+++ b/private_dot_ssh/config.tmpl
@@ -2,5 +2,5 @@ Host *
   {{- if eq .chezmoi.os "darwin" }}
   IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
   {{ else }}
-  IdentityAgent "~/1password/agent.sock"
+  IdentityAgent "~/.1password/agent.sock"
   {{ end }}
