Extract zsh aliases to their own file and add help alias.

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -188,13 +188,13 @@ alias bsp="brew services stop"
 alias bsr="brew services restart"
 alias bss="brew services start"
 
+{{ if !.work_computer -}}
 # Betterdiscord alias
 alias betterdiscord-update="DISC_CONFIG=\"\$HOME/.var/app/com.discordapp.Discord/config/discord\" && BD_ASAR=betterdiscord.asar && wget --timestamping -P \"\${DISC_CONFIG}/../BetterDiscord/data\" -- \"https://github.com/BetterDiscord/BetterDiscord/releases/latest/download/\${BD_ASAR}\" && DISC_VER=\"\$(ls --sort=time --time=creation \"\${DISC_CONFIG}\" | grep -E -m 1 '^[0-9]+\\.[0-9]+\\.[0-9]+\$')\" && echo -e \"require('../../../../BetterDiscord/data/\${BD_ASAR}');\\nmodule.exports = require('./core.asar');\" | tee \"\${DISC_CONFIG}/\${DISC_VER}/modules/discord_desktop_core/index.js\" && echo -e \"\\nBetterDiscord installed. Restart Discord if currently running.\" || echo -e \"\\nInstallation failed.\""
+{{ end }}
 
 # Tre setup
 tre() { command tre "$@" -e && source "/tmp/tre_aliases_$USER" 2>/dev/null; }
-
-alias zshrc='${=EDITOR} ${ZDOTDIR:-$HOME}/.zshrc' # Quick access to the .zshrc file
 
 alias cc='gcc'
 alias CC='gcc'
@@ -216,7 +216,8 @@ alias pc='podman compose'
 alias lzd='lazydocker'
 {{ end -}}
 
-# Yarn aliases
+# Zsh aliases
+source ~/.config/zsh/zsh.zsh
 source ~/.config/zsh/yarn.zsh
 
 # use bat as a colorizing pager for man
